--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "socks-v5",
+  "name": "socks-proxy-v5",
   "version": "0.7.0",
   "description": "Implementation of socks 5 version on node js",
   "main": "index.js",
