--- a/package.json
+++ b/package.json
@@ -34,5 +34,13 @@
   "bugs": {
     "url": "https://github.com/MoksS/socks-v5/issues"
   },
-  "homepage": "https://github.com/MoksS/socks-v5#readme"
+  "homepage": "https://github.com/MoksS/socks-v5#readme",
+  "dependencies": {
+    "eslint": "6.8.0",
+    "eslint-config-airbnb-base": "14.0.0",
+    "eslint-config-prettier": "6.9.0",
+    "eslint-plugin-import": "2.20.0",
+    "eslint-plugin-prettier": "3.1.2",
+    "prettier": "1.19.1"
+  }
 }
